# motion

./: CMakeLists.txt  Doxyfile  README.md  motionConfig.cmake
docs/: Data_8hpp.html  Data_8hpp.js  Data_8hpp_source.html  Dynamics_8hpp.html  Dynamics_8hpp_source.html  InverseKinematics_8hpp.html  InverseKinematics_8hpp_source.html  Joint_8hpp.html  Joint_8hpp.js  Joint_8hpp_source.html  Kinematics_8hpp.html  Kinematics_8hpp_source.html  Link_8hpp.html  Link_8hpp.js  Link_8hpp_source.html  Math_8hpp.html  Math_8hpp_source.html  Model_8hpp.html  Model_8hpp.js  Model_8hpp_source.html  Parser_8hpp.html  Parser_8hpp_source.html  Solver_8hpp.html  Solver_8hpp_source.html  annotated.html  annotated_dup.js  bug.html  classMyLibrary_1_1Example-members.html  classMyLibrary_1_1Example.html  classMyLibrary_1_1SubclassExample-members.html  classMyLibrary_1_1SubclassExample.html  classes.html  classtr_1_1IKConstraint-members.html  classtr_1_1IKConstraint.html  classtr_1_1IKCost-members.html  classtr_1_1IKCost.html  classtr_1_1IKVariables-members.html  classtr_1_1IKVariables.html  classtr_1_1ik_1_1IKConstraint-members.html  classtr_1_1ik_1_1IKConstraint.html  (+116 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  functions_0.js  functions_1.js  (+34 more)
examples/: footstep_example.cpp  main.cpp  motiongeneration_example.cpp  splines_example.cpp
include/: MotionGeneration.hpp  QuinticSpline.hpp  Trajectory.hpp  math.hpp
test/: math_test.cpp  motiongeneration_test.cpp  quinticspline_test.cpp
